locales: no Cashu contacts nit

--- a/locales/en.json
+++ b/locales/en.json
@@ -1520,7 +1520,7 @@
     "cashu.lockTo": "Locked to",
     "cashu.locktime": "Locked until",
     "cashu.lock": "Lock",
-    "cashu.noContactsWithCashuPubkey": "No contact with Cashu pubkey",
+    "cashu.noContactsWithCashuPubkey": "No contacts with Cashu pubkey",
     "cashu.noDuration": "no duration",
     "cashu.duration.1Day": "1 Day",
     "cashu.duration.1Week": "1 Week",
