feat: support listing and disconnecting peers for LNC

--- a/locales/en.json
+++ b/locales/en.json
@@ -350,16 +350,19 @@
     "views.OpenChannel.fundMax": "Use all possible funds",
     "views.OpenChannel.openAdditionalChannel": "Open additional channel",
     "views.OpenChannel.removeAdditionalChannel": "Remove additional channel",
-    "views.OpenChannel.noPeers": "No peers found",
-    "views.OpenChannel.satsRecv": "Sats received",
-    "views.OpenChannel.pingTime": "Ping time",
-    "views.OpenChannel.satsSent": "Sats sent",
-    "views.OpenChannel.disconnectPeerModalTitle": "Disconnect peer",
-    "views.OpenChannel.disconnectPeerModalText": "Are you sure you want to disconnect from this peer?",
-    "views.OpenChannel.peerNotConnected": "Peer not connected",
-    "views.OpenChannel.peerNotFound": "Peer not found",
-    "views.OpenChannel.peersFetchFailed": "Failed to fetch peers",
-    "views.OpenChannel.disconnectPeerFailed": "Failed to disconnect peer",
+    "views.ChannelsPane.noPeers": "No peers found",
+    "views.ChannelsPane.satsRecv": "Sats received",
+    "views.ChannelsPane.pingTime": "Ping time",
+    "views.ChannelsPane.satsSent": "Sats sent",
+    "views.ChannelsPane.bytesSent": "Bytes sent",
+    "views.ChannelsPane.bytesRecv": "Bytes received",
+    "views.ChannelsPane.disconnectPeerModalTitle": "Disconnect peer",
+    "views.ChannelsPane.disconnectPeerModalText": "Are you sure you want to disconnect from this peer?",
+    "views.ChannelsPane.peerNotConnected": "Peer not connected",
+    "views.ChannelsPane.peerNotFound": "Peer not found",
+    "views.ChannelsPane.peersFetchFailed": "Failed to fetch peers",
+    "views.ChannelsPane.disconnectPeerFailed": "Failed to disconnect peer",
+    "views.ChannelsPane.connected": "Connected",
     "views.Wallet.BalancePane.sync.title": "Finishing sync",
     "views.Wallet.BalancePane.sync.text": "Hang on tight! You will be ready to use Zeus soon.",
     "views.Wallet.waitForSync": "Your node must be fully synced before you can send or receive payments. Please wait.",
@@ -611,7 +614,6 @@
     "views.OpenChannel.private": "Private",
     "views.OpenChannel.closeAddress": "Close address (Optional)",
     "views.OpenChannel.closeAddressExplainer": "An optional address where funds will be sent during a cooperative close. Can only be set when opening the channel and only if the peer supports it. If set, the channel can only be closed to this address.",
-    "views.OpenChannel.connected": "Connected",
     "views.Payment.title": "Payment",
     "views.Payment.inTransitPayment": "In Transit Payment",
     "views.Payment.failedPayment": "Failed Payment",
