locales: Mint token -> Send ecash

--- a/locales/en.json
+++ b/locales/en.json
@@ -1512,8 +1512,7 @@
     "cashu.unspentToken": "Unspent Cashu token",
     "cashu.tapToConfigure": "No mints found. Tap to configure",
     "cashu.tapToConfigure.short": "Tap to configure",
-    "cashu.mintToken": "Mint token",
-    "cashu.mintEcashToken": "Mint ecash token",
+    "cashu.sendEcash": "Send ecash",
     "cashu.lockToPubkey": "Lock to Pubkey (optional)",
     "cashu.lockEcash": "Lock ecash",
     "cashu.lockEcashDescription": "Lock ecash token to a public key. Only the receiver will be able to unlock it.",
