--- a/locales/en.json
+++ b/locales/en.json
@@ -1505,6 +1505,7 @@
     "views.Cashu.CashuPayment.title": "Cashu Payment",
     "cashu.mint": "Mint",
     "cashu.mints": "Mints",
+    "cashu.cashuMints": "Cashu mints",
     "cashu.mintUrl": "Mint URL",
     "cashu.token": "Cashu token",
     "cashu.receivedToken": "Received Cashu token",
