--- a/locales/en.json
+++ b/locales/en.json
@@ -1499,7 +1499,7 @@
     "views.OnChainAddresses.sortBy.balanceDescending": "Balance (descending)",
     "views.OnChainAddresses.createAddress": "Create address",
     "views.OnChainAddresses.changeAddresses": "Change addresses",
-    "views.Cashu.ReceiveEcash.title": "Receive Ecash",
+    "views.Cashu.ReceiveEcash.title": "Receive ecash",
     "views.Cashu.ReceiveEcash.readTokenFromClipboard": "Read token from clipboard",
     "views.Cashu.CashuInvoice.title": "Cashu Invoice",
     "views.Cashu.CashuPayment.title": "Cashu Payment",
