Clover Support: Code cleanup and updated the Clover view to display an error in the UI when it is unable to fetch the products

--- a/locales/en.json
+++ b/locales/en.json
@@ -913,7 +913,7 @@
     "views.Settings.POS.squareAccessToken": "Square Access token",
     "views.Settings.POS.squareLocationId": "Square Location ID",
     "views.Settings.POS.cloverMerchantId": "Clover Merchant Identifier",
-    "views.Settings.POS.cloverApiToken": "Clover Api Token",
+    "views.Settings.POS.cloverApiToken": "Clover API Token",
     "views.Settings.POS.merchantName": "Merchant name (Optional, used for invoice memos)",
     "views.Settings.POS.confPref": "Confirmation preference",
     "views.Settings.POS.disableTips": "Disable tips",
@@ -1259,6 +1259,8 @@
     "pos.views.Wallet.PosPane.noOrdersPaid": "No orders have been paid yet",
     "pos.views.Wallet.PosPane.fetchingRates": "Fetching exchange rates",
     "pos.views.Wallet.PosPane.uncategorized": "Uncategorized",
+    "pos.views.Wallet.CloverPosPane.fetchProductsError": "Could not fetch products from Clover",
+    "pos.views.Wallet.CloverPosPane.InvalidConfigError": "Clover POS has not been correctly configured",
     "pos.views.Order.tax": "Tax",
     "pos.views.Order.taxFiat": "Tax (fiat)",
     "pos.views.Order.taxBitcoin": "Tax (Bitcoin)",
