feat: allow users to set speed for animated QRs

--- a/locales/en.json
+++ b/locales/en.json
@@ -849,6 +849,10 @@
     "views.Settings.Display.removeDecimalSpaces": "Remove decimal spaces from Bitcoin denominated amounts",
     "views.Settings.Display.showMillisatoshiAmounts": "Show millisatoshi amounts",
     "views.Settings.Display.selectNodeOnStartup": "Select wallet on startup",
+    "views.Settings.Display.qrAnimationSpeed": "QR animation speed",
+    "views.Settings.Display.qrAnimationSpeed.fast": "Fast",
+    "views.Settings.Display.qrAnimationSpeed.medium": "Medium",
+    "views.Settings.Display.qrAnimationSpeed.slow": "Slow",
     "views.Settings.privacy": "Privacy",
     "views.Settings.payments": "Payments",
     "views.Settings.Privacy.title": "Privacy settings",
