fix(ui): QR speed buttons aligment issue

--- a/locales/en.json
+++ b/locales/en.json
@@ -186,6 +186,7 @@
     "components.CollapsedQr.stopNfc": "Stop NFC broadcast",
     "components.CopyButton.copied": "Copied!",
     "components.CopyButton.copy": "Copy to Clipboard",
+    "components.QRSpeedMeterButton.speed": "QR Speed",
     "components.FeeBreakdown.nowClosed": "Now closed",
     "components.HopPicker.defaultTitle": "Channel to use",
     "components.HopPicker.selectChannel": "Select channel to use",
