feat(cashu): add automatic mint rotation for cashu wallets

--- a/locales/en.json
+++ b/locales/en.json
@@ -1569,6 +1569,7 @@
     "views.Cashu.Mint.removeMint": "Remove mint",
     "views.Cashu.Mint.selectedMint": "This is your selected mint",
     "views.Cashu.Mint.setSelected": "Set selected",
+    "views.Cashu.Mint.rotateMints": "Automatically rotate through mints",
     "views.Cashu.Mint.restoration": "Recovering your Cashu proofs and balances",
     "views.Cashu.Mint.restorationKeyset": "Restoring keyset",
     "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
@@ -1585,6 +1586,10 @@
     "views.Cashu.CashuToken.info": "Cashu Token Info",
     "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
     "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
+    "views.Cashu.LightningAddressInfo.rotateMints": "Rotate through mints",
+    "views.Cashu.LightningAddressInfo.selectRotationDuration": "Select rotation duration",
+    "views.Cashu.LightningAddressInfo.nextRotation": "Next rotation",
+    "views.Cashu.LightningAddressInfo.rotationNotStarted": "Rotation not started yet",
     "views.Cashu.UnspentTokens.title": "Unspent tokens",
     "views.Cashu.UnspentTokens.noUnspentTokens": "No unspent tokens",
     "views.LightningAddress.NWC.explainer1": "This is a self-custodial Lightning address that connects to a remote node using Nostr Wallet Connect (NWC).",
