--- a/locales/en.json
+++ b/locales/en.json
@@ -1495,6 +1495,17 @@
     "components.AlertModal.neutrinoPeers": "Problematic neutrino peers",
     "components.AlertModal.neutrinoExplainer": "Neutrino peers with high ping times can cause performance issues in the app.",
     "components.AlertModal.reviewPeers": "Review neutrino peers list",
+    "components.NewChannelModal.title": "Select channel type",
+    "components.NewChannelModal.jit": "Just-in-time",
+    "components.NewChannelModal.jit.info1": "Purchase a channel lease from the LSP that will be opened instantly.",
+    "components.NewChannelModal.jit.info2": "Starts with receiving capacity so it's great for sending and receiving.",
+    "components.NewChannelModal.lsps1": "Purchase in advance",
+    "components.NewChannelModal.lsps1.info1": "Purchase a channel lease from the LSP.",
+    "components.NewChannelModal.lsps1.info2": "You'll have to wait for several on-chain confirmations, but it's a bit less expensive than just-in-time channels. Starts with receiving capacity so it's great for sending and receiving.",
+    "components.NewChannelModal.onchain": "On-chain funded",
+    "components.NewChannelModal.onchain.info1": "Open a channel with your on-chain balance to a node of your choosing.",
+    "components.NewChannelModal.onchain.info2": "Only good for spending until you start sending payments.",
+    "components.NewChannelModal.learnMore": "Learn more about ZEUS' channel types",
     "views.PendingHTLCs.title": "Pending HTLCs",
     "views.PendingHTLCs.noPendingHTLCs": "No pending HTLCs",
     "views.PendingHTLCs.incoming": "Incoming",
